[package]
name = "rust_study"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.5.5"
colored = "2.0.0"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3

[workspace]
members = [
    "addwork",
    "addwork-one",
]